--- a/pages/about/BasicCSS.css
+++ b/pages/about/BasicCSS.css
@@ -6,12 +6,14 @@
 
 .HeaderLogo{
     position: relative;
-    left: 1150px;
+    left: 150px;
     width: 350px;
 }
 
 .content {
-    color: #242424;
+    color: #ffffff;
+    font-style: oblique;
+    font-size: larger;
 }
 
 body {
@@ -22,7 +24,9 @@ body {
 }
 
 footer {
-    color: chocolate;
+    color: #ffffff;
+    font-style: oblique;
+    font-size: larger;
 }
 
 footer a{
